# armada-spark

./: .claudeignore  .gitignore  .scalafmt.conf  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pom.xml
.claude/: settings.json  settings.local.example.json
benchmark/: driver-template.yaml  executor-template.yaml  spark-defaults.conf
conf/: log4j2.properties  makeS3.py  spark-defaults.conf  spark.properties
docker/: Dockerfile  armada-entrypoint.sh  jupyter-entrypoint.sh
docs/: architecture.md  templates.md  ui.md
e2e/: armada-operator.patch  extract-kind-cert.sh  kind-config-external-access.yaml  spark-defaults.conf
example/: .gitignore
examples/: runSparkPi.sh  spark-driver-job.yaml  spark-executor-job.yaml  spark-pi-driver.yaml  spark-pi-executor.yaml  submitSparkPi.sh
scripts/: benchmark.sh  config.sh.example  create-cluster.sh  createBmTools.sh  createDssImage.sh  createDsssImage.sh  createFbsImage.sh  createImage.sh  default_config.sh  dev-e2e.py  dev-e2e.sh  entrypoint.sh  files.sh  files2.sh  filesParameterExample.sh  forceImage.sh  forceSpark.sh  functions.sh  init.sh  inotify.yaml  (+11 more)
scripts/tests/: README.md  conftest.py  prep_jobs.sh  pyproject.toml  run.py  run.sh
scripts/tests/harness/: __init__.py  config.py  jobs.py  outcome.py  postgres.py  submit.py
scripts/tests/integration/db/: README.md  db_test.sh  test_db.py
scripts/tests/integration/db/jobs/: db_roundtrip.py
scripts/tests/lib/: common.sh
scripts/tests/unit/: test_config.py  test_conftest_options.py  test_jobs.py  test_outcome.py  test_postgres.py  test_submit.py
(+151 files in other folders)
